[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/nicense/nicense_button.gd" type="Script" id=1]
[ext_resource path="res://app/modules/screens/settings/settings_screen.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_top = 8.0
content_margin_bottom = 0.0

[node name="SettingsScreen" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/bg = SubResource( 7 )
scroll_horizontal_enabled = false
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1432.0
margin_bottom = 1432.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animations" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1424.0
margin_bottom = 58.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Animations"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1417.0
margin_bottom = 51.0
custom_constants/separation = 4

[node name="AnimationsEnabled" type="MarginContainer" parent="VBoxContainer/Animations/VBoxContainer"]
margin_right = 1410.0
margin_bottom = 24.0
custom_constants/margin_top = -4
custom_constants/margin_bottom = -4

[node name="AnimationsEnabled" type="CheckButton" parent="VBoxContainer/Animations/VBoxContainer/AnimationsEnabled"]
margin_top = -4.0
margin_right = 1410.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 2 )
text = "SETTINGS_ANIMATIONS_ENABLED"

[node name="AnimationSpeed" type="HBoxContainer" parent="VBoxContainer/Animations/VBoxContainer"]
margin_top = 28.0
margin_right = 1410.0
margin_bottom = 44.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/Animations/VBoxContainer/AnimationSpeed"]
margin_top = 1.0
margin_right = 189.0
margin_bottom = 15.0
text = "SETTINGS_ANIMATION_SPEED"

[node name="HSlider" type="HSlider" parent="VBoxContainer/Animations/VBoxContainer/AnimationSpeed"]
margin_left = 197.0
margin_right = 1410.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.25
max_value = 2.0
step = 0.25
value = 0.25
tick_count = 8

[node name="Language" type="OptionButton" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 1424.0
margin_bottom = 94.0
text = "SETTINGS_LANGUAGE"

[node name="Theme" type="OptionButton" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 1424.0
margin_bottom = 130.0
text = "SETTINGS_THEME"

[node name="VibrateOnTouch" type="CheckButton" parent="VBoxContainer"]
visible = false
margin_top = 130.0
margin_right = 1264.0
margin_bottom = 170.0
text = "SETTINGS_VIBRATE_ON_TOUCH"

[node name="DiscordRichPresence" type="CheckButton" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 1424.0
margin_bottom = 186.0
text = "SETTINGS_DISCORD_RICH_PRESENCE"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 1424.0
margin_bottom = 222.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="DonateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 704.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "SETTINGS_DONATE"

[node name="NicenseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 1424.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "SETTINGS_SHOW_COPYRIGHT"
script = ExtResource( 1 )

[node name="Windows" type="Control" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="WindowDialog" parent="Windows"]
margin_right = 223.0
margin_bottom = 204.0
window_title = "Copyright"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Windows/Copyright"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Windows/Copyright/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 207.0
margin_bottom = 188.0
custom_styles/panel = SubResource( 1 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Software" type="TabContainer" parent="Windows/Copyright/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
tab_align = 0

[node name="Licenses" type="TabContainer" parent="Windows/Copyright/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
tab_align = 0

[connection signal="toggled" from="VBoxContainer/Animations/VBoxContainer/AnimationsEnabled/AnimationsEnabled" to="." method="_on_AnimationsEnabled_toggled"]
[connection signal="value_changed" from="VBoxContainer/Animations/VBoxContainer/AnimationSpeed/HSlider" to="." method="_on_AnimationSpeed_value_changed"]
[connection signal="item_selected" from="VBoxContainer/Language" to="." method="_on_Language_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Theme" to="." method="_on_Theme_item_selected"]
[connection signal="toggled" from="VBoxContainer/VibrateOnTouch" to="." method="_on_VibrateOnTouch_toggled"]
[connection signal="toggled" from="VBoxContainer/DiscordRichPresence" to="." method="_on_DiscordRichPresence_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DonateButton" to="." method="_on_DonateButton_pressed"]
